--- a/templates/home.html
+++ b/templates/home.html
@@ -6,21 +6,16 @@
 
 <!-- Hero Section -->
 <header class="row bg-black">
-  <div class="col-md-4">
-    <!-- <img src="{% static 'portfolio/profile.jpeg' %}" /> -->
+  <div class="col-md-4 py-2" >
+    <img src="{% static 'img/profile.jpeg' %}" style="width:23rem;"/>
   </div>
 
   <div class="col-md-8 my-auto p-4">
-    <h1>I am <strong>Ryan Ray</strong></h1>
-    <h3>I'm a Python FullStack Developer</h3>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis tempora perspiciatis molestias iusto ducimus
-      soluta mollitia ratione, fuga praesentium, reiciendis minima! Facere, veniam! Omnis, quod molestias quo fugit enim
-      vero vitae, cumque tenetur at, impedit provident dicta laudantium quia facilis consequuntur blanditiis iste
-      laborum voluptatibus libero doloribus? Pariatur voluptatem obcaecati deserunt aperiam exercitationem nam voluptas
-      rerum reprehenderit minima, earum impedit saepe eos ducimus fugit itaque a nulla omnis architecto laudantium
-      blanditiis? Eius ipsum quidem enim architecto fugiat porro inventore libero praesentium aperiam nulla
-      exercitationem nemo soluta, culpa impedit est et doloribus ut necessitatibus odit, dicta voluptate! Vero ab nulla
-      placeat.</p>
+    <h1>Welcome!</h1>
+    <h2>I am <strong class="storn">Julian Ward</strong></h2>    
+    <p>I am a self-taught <strong class="storn">Python</strong> developer who is always seeking new challenges and opportunities to learn and grow as a developer. With experience working with <strong class="storn">Python</strong> and <strong class="storn">Django</strong>, I am continually striving to improve my coding skills and efficiency.</p>
+    <P>Currently, I am focusing on learning front-end technologies such as JS and ReactJs, and I am excited about the possibility of working on my own project from back-end to front-end.</p>
+    <p>Thank you for visiting my portfolio, and <strong class="storn">I look forward to working with you soon!</strong> </p>
     <a class="btn btn-primary btn-lg rounded-0 my-3" href="{% static 'portfolio/cv.pdf' %}">Download my CV</a>
   </div>
 </header>
@@ -28,30 +23,90 @@
 <!-- Porfolio Section -->
 <div class="row my-4 text-center">
 
-  <h3>My Projects</h3>
-  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis, aperiam?</p>
+  <h2 class="my-4" id="project">My <strong class="storn">Projects</strong></h2>
+  
 
   {% for project in projects %}
   <div class="col-md-4 p-4">
-    {% for project in projects %}
+   
       <div class="card bg-black card-project">
-        <img src="{{project.image}}" class="card-img-top" />
+        <img src="{{project.image}}" class="card-img-top" style="height:8.5rem;"/>
 
-        <div class="card-body">
+        <div class="card-body text-center">
 
-          <h2>{{ project.title }}</h2>
+          <h2 class="border-bottom border-primary pb-2">{{ project.title }}</h2>
           <p>{{ project.body }}</p>
 
           {% if project.link %}
-          <a href="{{project.link}}" class="btn btn-light rounded-0 btn-sm" target="__blank" rel="noreferrer">Visit the
-            Project</a>
+            <div class="child-card">
+              <a href="{{project.link}}" class="btn btn-primary rounded-3 btn-sm pb-2" target="__blank" rel="noreferrer">Visit the
+                Project</a>
+            </div>
           {% endif %}
+          
         </div>
       </div>
-      {% endfor %}
+      
   </div>
   {% endfor %}
 </div>
+<div class="technologies text-center">  
 
+    <h2 class="my-5" id="tec">My <strong class="storn">skills</strong></h2>
+
+    <div class="row bg-black text-center d-flex justify-content-center">      
+      <div class=" col-md-10 d-flex flex-wrap justify-content-center">
+        <picture>      
+          <img src="{% static 'img/icons8-html-5.svg' %}" alt="HTML5">
+        </picture>
+        <picture>
+          <img src="{% static 'img/icons8-css3.svg' %}" alt="css3">
+        </picture>
+        <picture>
+          <img src="{% static 'img/icons8-bootstrap.svg' %}" alt="css3">
+        </picture>
+        <picture>
+          <img src="{% static 'img/icons8-python.svg' %}" alt="Python">
+        </picture>
+        <picture>
+          <img src="{% static 'img/icons8-django.svg' %}" alt="Django">
+        </picture>
+        <picture>
+          <img src="{% static 'img/logo.png' %}" alt="css3" class="rest pt-3">
+        </picture>
+        <picture>
+          <img src="{% static 'img/icons8-docker.svg' %}" alt="css3">
+        </picture>
+        <picture>
+          <img src="{% static 'img/icons8-git.svg' %}" alt="css3">
+        </picture>
+        <picture>
+          <img src="{% static 'img/icons8-github.svg' %}" alt="css3">
+        </picture>
+        
+    </div>
+  </div>
+</div>
+
+
+<footer class="row contact text-center footer mt-5 ">
+    <h3 class="my-2" id="contact">Con<strong class="storn">tacts</strong></h3>
+
+    <div class=" col-md-12 bg-black d-flex justify-content-center">
+      <picture class="d-flex">
+        <img src="{% static 'img/icons8-mail-30.png' %}" alt="mail">
+        <a href="mailto:jwf_12@hotmail.com" target="_blank">Email</a>
+      </picture>
+      <picture class="d-flex">
+        <img src="{% static 'img/icons8-github2.svg' %}" alt="github">
+        <a href="https://github.com/jwf12?tab=repositories" target="_blank">Github</a>
+      </picture>
+      <picture class="d-flex">
+        <img src="{% static 'img/icons8-linkedin.svg' %}" alt="css3">
+        <a href="https://www.linkedin.com/in/julian-ward-fraise/" target="_blank">LinkedIn</a>
+      </picture>
+    </div>
+
+</footer>
 
 {% endblock %}
