--- a/templates/home.html
+++ b/templates/home.html
@@ -7,7 +7,7 @@
 <!-- Hero Section -->
 <header class="row bg-black">
   <div class="col-md-4 py-2" >
-    <img src="{% static 'img/profile.jpeg' %}" style="width:23rem;"/>
+    <img src="{% static 'img/profile.jpeg' %}" class="img-fluid" style="max-width:100%; height:auto;"/>
   </div>
 
   <div class="col-md-8 my-auto p-4">
@@ -92,7 +92,7 @@
 <footer class="row contact text-center footer mt-5 ">
     <h3 class="my-2" id="contact">Con<strong class="storn">tacts</strong></h3>
 
-    <div class=" col-md-12 bg-black d-flex justify-content-center">
+    <div class=" col-md-12 bg-black d-flex justify-content-center flex-wrap">
       <picture class="d-flex">
         <img src="{% static 'img/icons8-mail-30.png' %}" alt="mail">
         <a href="mailto:jwf_12@hotmail.com" target="_blank">Email</a>
